# sha1-miner-gpu

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  build.sh  build_intel.sh  install.bat  install.sh  makefile  quickstart.sh  test.sh  test_miner.sh  test_opencl.cpp  test_simple.cpp
include/: common_headers.hpp  cxxsha1.hpp  gpu_platform.hpp  job_constants.cuh  job_upload_api.h  multi_gpu_manager.hpp  sha1_opencl_miner.cpp  sha1_opencl_miner.hpp  utilities.hpp
include/miner/: cuda_device_functions.cuh  kernel_launcher.cpp  sha1_collision_kernel.cu  sha1_kernel.cpp  sha1_kernel.cu  sha1_kernel_amd.hip.cpp  sha1_kernel_intel.sycl.cpp  sha1_miner.cuh  sha1_miner_core.cuh  sha1_miner_functions.h  sha1_miner_sycl.hpp  sha1_shattered_kernel.cu  sha1_shattered_kernel.cuh  sycl_wrappers.cpp
logging/: logger.hpp
net/: pool_client.cpp  pool_client.hpp  pool_client_uws.cpp  pool_integration.cpp  pool_integration.hpp  pool_protocol.cpp  pool_protocol.hpp  pool_utils.cpp  uws_wrapper.h
scripts/: mine.py  test.py
shattered/: m.hpp
shattered/lib/: cuda_cyclicbuffer.hpp  sha1benchmark.cu  timer.hpp  types.hpp
shattered/nc2/: cuda_step14-60.cu  find_basesols.cpp  neutral_bits_packing.hpp  tables_org.hpp  tables_wQ14nb.hpp  tables_wQ17nb.hpp  tables_wboom.hpp
src/: benchmark.cpp  cxxsha1.cpp  globals.cpp  globals.hpp  gpu_architecture.hpp  host.cu  job_constants.cu  job_upload.cpp  kernel.cu  main.cpp  main_opencl.cpp  miner_host.cpp  mining_system.cpp  mining_system.hpp  multi_gpu_manager.cpp  sha1_host.cpp  sha1_wrapper.hpp  verify_sha1.cpp  verify_sha1.cu  verify_sha1_gpu.cu  verify_sha1_gpu_comprehensive.cu
src/core/: mining_system.cpp  mining_system.hpp  multi_gpu_manager.cpp
src/utils/: test_utils.cpp
tls/: tls.hpp
